# Frost

./: .npmrc  CLAUDE.md  CONTRIBUTORS.md  LICENSE  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AmbientPlayer.jsx  CategoryFilter.jsx  DashboardLayout.jsx  DateGroupHeader.jsx  EmptyState.jsx  FooterMenu.jsx  LanguageSwitcher.jsx  PomodoroTimer.jsx  PrioritySelector.jsx  ProgressRing.jsx  QuoteDisplay.jsx  SearchBar.jsx  StatsBar.jsx  StatsPanel.jsx  StickyBoard.jsx  StickyNote.jsx  StreakBadge.jsx  ThemeToggle.jsx  Toast.jsx  TodoInput.jsx  TodoItem.jsx  TodoList.jsx  ViewSwitcher.jsx
src/hooks/: useAudio.js  useDailyGoal.js  useKeyboard.js  useLocale.jsx  useQuotes.js  useStickies.js  useStreak.js  useTheme.js  useTimer.js  useToast.js  useTodos.js  useViewport.js
src/i18n/: locales.js
src/utils/: dateGrouping.js  defaults.js  exportImport.js  storage.js
