[package]
name = "frost"
version = "1.0.0"
description = "A cozy, minimal focus companion"
authors = ["Guhong_X"]
license = "MIT"
repository = "https://github.com/01-xzl/Frost"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
